client/styelsheets/style.less
/* ... */
.then-now-zoom-image-close-container,
.zoom-image-close-container {
  position: relative;
}

.then-now-zoom-image-container img,
.zoom-image-container img {
  border: solid #FFF 10px;
}

.now-zoom-image {
  position: absolute;
  bottom: 0;
  right: 0;
  opacity: 1;
}

.dakota-container i,
.then-now-zoom-image-container i,
.zoom-image-container i {
  position: absolute;
  bottom: -40px;
  right: -40px;
  font-size: 60px;
  background: @orange;
  padding: 20px;
  color: #FFF;
}

.then-date,
.now-date {
  position: absolute;
  font-size: 80px;
  color: #FFF;
  font-family: national-bold, sans-serif;
  bottom: 60px;
}

.then-date,
.then-credit {
  left: 80px;
}

.now-date,
.now-credit {
  right: 80px;
}

.then-credit,
.now-credit {
  color: #FFF;
  position: absolute;
  font-family: national-medium, sans-serif;
  font-size: 20px;
  bottom: 50px;
  opacity: .5;
}

/**
 * ----------------------------------------------------------------------------
 * Map container
 * ----------------------------------------------------------------------------
 */
.map-base {
  width: @screen-width;
  height: @screen-height;
  margin: 0;
  padding: 0;
}

/**
 * ----------------------------------------------------------------------------
 * Map styles
 * ----------------------------------------------------------------------------
 */
.map-line,
.map-circle {
  fill: white;
}

.map-line {
  stroke: #062926;
  stroke-width: 4;
}

.map-box {
  fill: white;
  stroke: black;
  stroke-width: 5;
}

/**
 * ----------------------------------------------------------------------------
 * Map styles - Dev. Used when placing the map projection
 * ----------------------------------------------------------------------------
 */
.states {
  fill: none;
  stroke: purple;
  stroke-width: 5;
}

.counties {
  fill: none;
  stroke: purple;
  stroke-width: .5;
}

.dev-map-details {
  display: none;
  position: absolute;
  top: 200px;
  right: 50px;
  font-size: 20px;
  background: white;
  color: @drk-blue;
  margin: 20px;
  padding: 0 20px 20px 20px;
  text-align: center;
}

.dev-map-details input {
  font-size: 30px;
  padding: 20px;
  margin: 20px;
  background: #DDD;
}

/**
 * ----------------------------------------------------------------------------
 * Screensaver
 * ----------------------------------------------------------------------------
 */
#screensaver {
  width: @screen-width;
  max-width: @screen-width;
  height: @screen-height;
  padding: 0;
  background: white;
  z-index: 9999;
  position: absolute;
  top: 0;
  left: 0;
}

/**
 * ----------------------------------------------------------------------------
 * Admin table
 * ----------------------------------------------------------------------------
 */

.admin-page {
  width: 80%;
}

.admin-table-content {
  color: black;
}

.cell-error,
.cell-warning {
  background: @orange;
  color: #FFF;
  padding: 20px;
  text-align: center;
}

.cell-error {
  background: darken(@orange, 20%);
}

/**
 * ----------------------------------------------------------------------------
 * Admin form
 * ----------------------------------------------------------------------------
 */
form.edit-image {
  padding-bottom: 20px;
}

/**
 * ----------------------------------------------------------------------------
 * Loading spinner
 * ----------------------------------------------------------------------------
 */
.spinner {
  width: 40px;
  height: 40px;
  margin: 100px auto;
  background-color: #333;

  border-radius: 100%;
  -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
  animation: sk-scaleout 1.0s infinite ease-in-out;
}

@-webkit-keyframes sk-scaleout {
  0% { -webkit-transform: scale(0) }
  100% {
    -webkit-transform: scale(1.0);
    opacity: 0;
  }
}

@keyframes sk-scaleout {
  0% {
    -webkit-transform: scale(0);
    transform: scale(0);
  } 100% {
      -webkit-transform: scale(1.0);
      transform: scale(1.0);
      opacity: 0;
    }
}

.svg-detail {
  position: absolute;
  top: 0;
  left: 0;
}

/**
 * ----------------------------------------------------------------------------
 * Dakota player
 * ----------------------------------------------------------------------------
 */
.dakota-stage {
  z-index: 999;
  position: relative;
  background: @tan;
  margin: 40px auto;
  border: 8px solid #EEE;
  width: 1308px;
  background: url('images/ricepaper.png');
}

.dakota-stage-title {
  width: 1290px;
  font-family: national-bold, sans-serif;
  font-size: 40px;
  background: @drk-blue;
  opacity: .9;
  color: @tan;
  margin-bottom: 10px;
}

.dakota-video-stage {
  margin-right: 10px;
}

.english-video-stage,
.dakota-video-stage {
  display: block;
  float: left;
  overflow:hidden;
  height: 460px;
  max-height: 460px;
  width: 640px;
  background: #000;
}

.english-video-stage video,
.dakota-video-stage video {
  margin-top: -10px;
}

.dakota-title-word {
  float: left;
  width: 640px;
  font-family: national-bold, sans-serif;
  font-size: 60px;
  color: @drk-blue;
  text-align: center;
}

.dakota-title {
  font-family: national-semibold-ital, sans-serif;
}


p.dakota-description {
  font-size: 40px;
  font-family: 'national-thin', sans-serif;
  color: @drk-blue;
  padding: 10px 250px;
  text-align: left;
}

#dakota-stage-fort-snelling-meeting-of-the-rivers p {
  font-size: 35px;
  padding: 10px 150px;
}

